<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teddy</string>
    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_basic">Basic</string>
    <string name="title_activity_battle">Battle</string>
    <string name="load">Load</string>
    <string name="save">Save</string>

    <!-- Details Labels -->
    <string name="charName">Name</string>
    <string name="charRace">Race</string>
    <string name="charLevel">Level</string>
    <string name="charAlign">Alignment</string>
    <string name="charDeity">Deity</string>
    <string name="charSize">Size</string>
    <string name="charAge">Age</string>
    <string name="charGender">Gender</string>
    <string name="charHeight">Height</string>
    <string name="charWeight">Weight</string>
    <string name="classHint">Class</string>

    <!-- ListViews -->
    <!-- Character Select Labels -->
    <string name="level">Lv: </string>

    <!-- Attack Labels -->
    <string name="aName">Name</string>
    <string name="aDamage">Dmg</string>
    <string name="aBonus">AtkBonus</string>
    <string name="aCrit">Crit</string>
    <string name="aRange">Range</string>
    <string name="aWeight">Weight</string>
    <string name="aSize">Size</string>
    <string name="aType">Type</string>
    <string name="aSpecial">Special Properties</string>

    <!-- Inventory Labels -->
    <string name="iQuantity">Quantity</string>
    <string name="iTotalWeight">Total Weight</string>
    <string name="title_activity_details2">Details2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_skills">Skills</string>

    <!-- Skill labels -->
    <string name="sSkill">Skill</string>
    <string name="sStat">Stat Mod.</string>
    <string name="sRank">Rank</string>
    <string name="sMisc">Misc.</string>

    <!-- Symbols -->
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="slash">/</string>

    <!-- Image lables -->
    <string name="heart">Health</string>
    <string name="fist">Melee</string>
    <string name="bow">Ranged</string>

    <!-- Battle Labels -->
    <string name="bexp">Exp.</string>
    <string name="bInit">Init. </string>
    <string name="bGrap">Grapple </string>
    <string name="bWill">Will </string>
    <string name="bFort">Fort. </string>
    <string name="bRef">Ref. </string>

    <!-- Stats Labels -->
    <string name="stStr">STR</string>
    <string name="stInt">INT</string>
    <string name="stDex">DEX</string>
    <string name="stCon">CON</string>
    <string name="stCha">CHA</string>
    <string name="stWis">WIS</string>
    <string name="score">Score</string>
    <string name="modscore">Mod.</string>
    <string name="tmpScore">Tmp. Score</string>
    <string name="tmpMod">Tmp. Mod.</string>

    <!-- Other stats info -->
    <string name="modStr">0</string>
    <string name="modInt">0</string>
    <string name="modDex">0</string>
    <string name="modCon">0</string>
    <string name="modCha">0</string>
    <string name="modWis">0</string>
    <string name="addAttack">Add an Attack</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!-- Settings labels -->
    <string name="ctheme">Change theme:</string>

    <!-- Content Descriptions -->
    <string name="PinkSwatch">Pink Swatch</string>
    <string name="RedSwatch">Red Swatch</string>
    <string name="PurpleSwatch">Purple Swatch</string>
    <string name="DarkRedSwatch">Dark Red Swatch</string>
    <string name="DarkBlueSwatch">Dark Blue Swatch</string>
    <string name="DarkGreenSwatch">Dark Green Swatch</string>
    <string name="BlueSwatch">Blue Swatch</string>
    <string name="GreenSwatch">Green Swatch</string>
    <string name="hello_world">Hello world!</string>

    <!-- Spells -->
    <string name="SpellLevel">Level: </string>
    <string name="SpellComp">Components: </string>
    <string name="SpellCastTime">Casting Time: </string>
    <string name="SpellRange">Range: </string>
    <string name="SpellEffect">Effect: </string>
    <string name="SpellDuration">Duration: </string>
    <string name="SpellSave">Saving Throw: </string>
    <string name="SpellResistance">Spell Resistance: </string>
    <string name="title_activity_spell_book">SpellBook</string>

</resources>