<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/attackHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addAttack"
        android:textSize="@dimen/header"
        android:gravity="center_horizontal"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtName"
        android:hint="@string/aName"
        android:layout_weight="2"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtBonus"
        android:hint="@string/aBonus"
        android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtDamage"
        android:hint="@string/aDamage"
        android:layout_weight="1"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtCrit"
        android:hint="@string/aCrit"
        android:layout_weight="1"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtRange"
        android:hint="@string/aRange"
        android:layout_weight="1"
        />
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtWeight"
        android:hint="@string/aWeight"
        android:layout_weight="1"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtType"
        android:hint="@string/aType"
        android:layout_weight="1"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:id="@+id/addAtSize"
        android:hint="@string/aSize"
        android:layout_weight="1"
        />
        
    </LinearLayout>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/addAtSpecPro"
        android:hint="@string/aSpecial"
		/>
   
</LinearLayout>