<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".Skills" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/sSkill"
            android1:textColor="#000000"
            android:layout_gravity="bottom"
            />
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/equal" 
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_gravity="bottom"/>
        
        <TextView
            android:text="@string/sStat"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/otherLabels"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/plus" 
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_gravity="bottom"/>
        
        <TextView
            android:text="@string/sRank"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/otherLabels"
            android:layout_weight="1"
            android:gravity="center_horizontal" 
            android:textColor="#000000"
            android:layout_gravity="bottom"/>
        
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/plus" 
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:textColor="#000000"/>
        
        <TextView
			android:text="@string/sMisc"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/otherLabels"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_gravity="bottom"/>
    </LinearLayout>
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>
