<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical" 
    android:padding="5sp">

    <TextView
        android:id="@+id/spellName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/spellSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/SpellLevel" 
	        android:textStyle="bold"/>

    	<TextView
	        android:id="@+id/spellLevel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellComp"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/spellComponents"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>

	
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellCastTime" 
	        android:textStyle="bold"/>

	    <TextView
	        android:id="@+id/spellCastTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>
	 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellRange" 
	        android:textStyle="bold"/>

	    <TextView
	        android:id="@+id/spellRange"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>
	 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellEffect"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/spellEffect"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>
	 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellDuration"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/spellDuration"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>

     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellSave"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/spellSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>
	 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/SpellResistance"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/spellResistance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
    
	 </LinearLayout>

     <TextView
         android:id="@+id/spellDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     
</LinearLayout>