<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000" >
    
   <TextView 
     	android:layout_height="wrap_content"
		android:layout_width="wrap_content"
        android:textSize="12sp"
        android:paddingLeft="4dip"
        android:textColor="#FFF"
        android:textStyle="bold" 
        android:text="@string/aName"/>
   <TextView android:id="@+id/itemName"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="#FFF"
            android:paddingLeft="2dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginBottom="1dip"/>
   
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
    	<TextView android:id="@+id/itemWeight"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:background="#FFF"
            android:paddingLeft="2dip"
            android:layout_marginLeft="2dip"/>
    	
    	 <EditText android:id="@+id/itemQuantity"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:background="#FFF"
            android:paddingLeft="2dip"
            android:layout_marginLeft="2dip"/> 
            
    	 <TextView android:id="@+id/itemTotWeight"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:background="#FFF"
            android:paddingLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginLeft="2dip"/>
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
    	 <TextView 
            android:text="@string/aWeight"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="12sp"
            android:paddingLeft="4dip"
            android:textColor="#FFF"
            android:textStyle="bold"
            />
    	 <TextView 
            android:text="@string/iQuantity"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="12sp"
            android:paddingLeft="4dip"
            android:textColor="#FFF"
            android:textStyle="bold"
            />
    	 <TextView 
            android:text="@string/iTotalWeight"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="12sp"
            android:paddingLeft="4dip"
            android:textColor="#FFF"
            android:textStyle="bold"
            />
        
    </LinearLayout>

</LinearLayout>